# documentation/api.yaml
@@ -17,59 +17,59 @@ externalDocs:
   description: Project Repository
   url: https://github.com/junyanj1/advancedSE-Project
 tags:
-  - name: Organizer
+  - name: User
     description: Things that organizer can do
   - name: Event
     description: Event related APIs
   - name: Attendance
     description: Attendance, Check-in, APIs
 paths:
-  /organization:
-    post:
-      tags:
-        - Organizer
-      summary: Create a new Organization
-      description: You can get the API Key from this
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                organization_name:
-                  type: string
-                  example: Columbia University
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/OrganizationWithKey"
-  /organization/{organization_id}:
-    get:
-      tags:
-        - Organizer
-      summary: Get Organization detail
-      parameters:
-        - name: organization_id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Organization"
-      security:
-        - ApiKeyAuth: []
+  # /organization:
+  #   post:
+  #     tags:
+  #       - User
+  #     summary: Create a new Organization
+  #     description: You can get the API Key from this
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               organization_name:
+  #                 type: string
+  #                 example: Columbia University
+  #     responses:
+  #       "200":
+  #         description: OK
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/OrganizationWithKey"
+  # /organization/{organization_id}:
+  #   get:
+  #     tags:
+  #       - User
+  #     summary: Get Organization detail
+  #     parameters:
+  #       - name: organization_id
+  #         in: path
+  #         required: true
+  #         schema:
+  #           type: string
+  #     responses:
+  #       "200":
+  #         description: OK
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/Organization"
+  #     security:
+  #       - ApiKeyAuth: []
   /users:
     post:
       tags:
-        - Organizer
+        - User
       summary: Create a new User
       requestBody:
         content:
@@ -85,13 +85,13 @@ paths:
                 $ref: "#/components/schemas/User"
       security:
         - ApiKeyAuth: []
-  /users/{email}:
+  /users/{user_id}:
     get:
       tags:
-        - Organizer
+        - User
       summary: Get User detail
       parameters:
-        - name: email
+        - name: user_id
           in: path
           required: true
           schema:
@@ -105,13 +105,13 @@ paths:
                 $ref: "#/components/schemas/User"
       security:
         - ApiKeyAuth: []
-  /users/{email}/events:
+  /users/{user_id}/events:
     get:
       tags:
-        - Organizer
-      summary: Get a list of events organized by this user
+        - User
+      summary: Get a list of events created by this user
       parameters:
-        - name: email
+        - name: user_id
           in: path
           required: true
           schema:
@@ -237,7 +237,10 @@ paths:
       tags:
         - Attendance
       summary: RSVP (see description)
-      description: This API is intended to be used by the invitee. This link should be sent to the user. When the user invokes this link, the server finds the user based on the personalized code and marks this invitee as rsvped.
+      description: |
+        This API is intended to be used by the invitee. This link should be
+        sent to the user. When the user invokes this link, the server finds
+        the user based on the personalized code and marks this invitee as rsvped.
       parameters:
         - name: event_id
           in: path
@@ -258,7 +261,10 @@ paths:
       tags:
         - Attendance
       summary: Check In (see description)
-      description: This API is intended to be used by the attendee. When the user invokes this link, the server finds the user based on the personalized code and check this person in.
+      description: |
+        This API is intended to be used by the attendee. When the user invokes
+        this link, the server finds the user based on the personalized code and
+        check this person in.
       parameters:
         - name: event_id
           in: path
@@ -283,23 +289,23 @@ components:
       in: header
       name: X-API-Key
   schemas:
-    Organization:
-      type: object
-      properties:
-        organization_id:
-          type: string
-          example: abcdefghijklmn
-        organization_name:
-          type: string
-          example: Columbia University
-    OrganizationWithKey:
-      allOf:     # Combines the Organization and the inline model
-        - $ref: '#/components/schemas/Organization'
-        - type: object
-          properties:
-            api_key:
-              type: string
-              example: asdfasdfasd
+    # Organization:
+    #   type: object
+    #   properties:
+    #     organization_id:
+    #       type: string
+    #       example: abcdefghijklmn
+    #     organization_name:
+    #       type: string
+    #       example: Columbia University
+    # OrganizationWithKey:
+    #   allOf:  # Combines the Organization and the inline model
+    #     - $ref: '#/components/schemas/Organization'
+    #     - type: object
+    #       properties:
+    #         api_key:
+    #           type: string
+    #           example: asdfasdfasd
     User:
       type: object
       properties:
@@ -307,10 +313,14 @@ components:
           type: string
           example: abcdefghijklmn
           nullable: true
+        user_id:
+          type: string
+          example: abcdefghijklmn
+          description: Randomly generated unique id
         email:
           type: string
           example: abc@abc.com
-          description: Uniquely identifies the User
+          description: Does not need to be unique
         username:
           type: string
           example: Pikachu
@@ -330,7 +340,7 @@ components:
           example: "This is a winter career fair"
         location:
           type: string
-          example: Columbia University, 2960 Broadway, New York, NY 10027
+          example: "Columbia University, 2960 Broadway, New York, NY 10027"
         lat:
           type: number
           example: 12.34
@@ -342,12 +352,12 @@ components:
         time:
           type: string
           example: "2021-03-22T18:34:00Z"
-          description: iso 8601 time format
+          description: "iso 8601 time format"
         duration:
           type: string
           example: "1h 30min"
     Event:
-      allOf:     # Combines the EventPostBody and the inline model
+      allOf:  # Combines the EventPostBody and the inline model
         - type: object
           properties:
             event_id:
